<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:card_view="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".detail.DetailFragment">


    <android.support.v7.widget.CardView

            android:id="@+id/card_view"
            android:layout_gravity="center"
            app:cardElevation="10dp"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"

                android:orientation="vertical">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView

                        style="@android:style/TextAppearance.Small"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/sale_status"/>

                <TextView


                        style="@android:style/TextAppearance.Small"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/typeOrder"/>


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView

                        android:id="@+id/detail_status"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="STATUS"/>

                <TextView
                        android:id="@+id/detail_sale_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="STATUS"/>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:orientation="vertical">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/payemnt_gatway"/>

                    <TextView


                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/receipt"/>


                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            android:id="@+id/detail_paymentGateway"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                    <TextView
                            android:id="@+id/detail_receiptNumber"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:orientation="vertical">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/date"/>

                    <TextView


                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/hour"/>


                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            android:id="@+id/detail_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                    <TextView
                            android:id="@+id/detail_hour"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="36dp"
                    android:orientation="vertical">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/freight"/>
                    <TextView


                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/gratuity"/>

                    <TextView


                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/discount"/>


                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView

                            android:id="@+id/detail_freight"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                    <TextView

                            android:id="@+id/detail_gratuity"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                    <TextView
                            android:id="@+id/detail_discount"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:orientation="vertical">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/totalPrice"/>

                    <TextView

                            style="@android:style/TextAppearance.Small"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="@string/grossPrice"/>


                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView

                            android:id="@+id/detail_totalPrice"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                    <TextView
                            android:id="@+id/detail_grossPrice"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="STATUS"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>